Source/WebCore/html/HTMLDetailsElement.cpp
@@ -22,6 +22,7 @@
 #include "HTMLDetailsElement.h"
 
 #if ENABLE(DETAILS_ELEMENT)
+#include "AXObjectCache.h"
 #include "ElementIterator.h"
 #include "HTMLSummaryElement.h"
 #include "InsertionPoint.h"
@@ -161,6 +162,10 @@ bool HTMLDetailsElement::childShouldCreateRenderer(const Node& child) const
 void HTMLDetailsElement::toggleOpen()
 {
     setAttribute(openAttr, m_isOpen ? nullAtom : emptyAtom);
+
+    // We need to post to the document because toggling this element will delete it.
+    if (AXObjectCache* cache = document().existingAXObjectCache())
+        cache->postNotification(nullptr, &document(), AXObjectCache::AXExpandedChanged);
 }
 
 }
